<resources>
	<string name="app_name">Roomies</string>
	<string name="title_activity_splash_screen">Roomies</string>
	<string name="title_activity_login">Login</string>
	<string name="title_activity_create_user">Create User</string>
	<string name="title_activity_password_recovery">Password Recovery</string>
	<string name="title_activity_home">Home</string>
	<string name="title_activity_join_group">Join Group</string>
	<string name="title_activity_group_choice">Group Choice</string>
	<string name="title_activity_invite_users">Invite Users</string>
	<string name="title_activity_create_group">CreateGroup</string>
	<string name="duty_header">Duties</string>

	<string name="title_activity_shared_items">SharedItems</string>
	<string name="plus">+</string>
	<string name="submit">Submit</string>
	<string name="trash">Trash</string>

	<string name="unhint">username</string>
	<string name="pwhint">password</string>
	<string name="login">Login</string>
	<string name="reg">Sign Up</string>
	<string name="forgotpw">Forgot Password?</string>
	<string name="remind">Remind</string>
	<string name="delete">Delete</string>

	<string name="create_group_header">Create Group</string>
	<string name="group_name_hint">Pick a group name</string>
	<string name="group_desription_hint">Give it a description</string>
	<string name="invitees_header">invitees</string>
	<string name="invitee_add_hint">invitee isername</string>


	<string name="title_activity_add_bill">AddBill</string>
	<string name="welcomehome">Welcome home</string>
	<string name="Ranking">Ranking:</string>
	<string name="trashduty">Trash Duty:</string>
	<string name="youowe">Total you owe:</string>
	<string name="reminder">Reminder:</string>
	<string name="bulletin">Bulletin Board:</string>
	<string name="roomies_home">Your roomies</string>
	<string name="shareditem_home">Shared\nItems</string>


	<string name="overallduties_home">Overall\nDuties</string>
	<string name="createduty_header1">First...\nGive it a name</string>
	<string name="createduty_header2">Whom to assign?</string>
	<string name="createduty_hint">vacuum</string>
	<string name="createduty_hint2">name</string>
	<string name="createduty_createbtn">Create</string>


	<!--Bill-->
	<string name="bill_title">Bill</string>
	<string name="bill_youowe_total">You owe:</string>
	<string name="bill_oweyou_total">You requested:</string>
	<string name="bill_incompletebtns">View Incomplete</string>
	<string name="bill_requestbtn">Request</string>
	<string name="bill_paynbtn">Pay</string>

	<!--Add Bill-->
	<string name="bill_addbill_title">Add Bill</string>
	<string name="addbill_name">What is it for?</string>
	<string name="addbill_amount">How Much is it?</string>
	<string name="addbill_who">Who to charge</string>
	<string name="addbill_request">They Owe</string>
	<string name="addbill_pay">Pay</string>
	<string name="addbill_submit">Submit</string>

	<!--Bulletin Board-->
	<string name="title_activity_add_bulletin">AddBulletin</string>
	<string name="title_activity_modify_bulletin">ModifyBulletin</string>
	<string name="bulletin_addbulletin_title">Add Bulletin</string>
	<string name="bulletin_modifybulletin_title">Modify Bulletin</string>

	<!--Settings Screen-->
	<string name="settings_title">Setting</string>
	<string name="settings_name">Name:</string>
	<string name="settings_email">Email:</string>
	<string name="settings_username">Username:</string>
	<string name="settings_previouspassword">Previous Password:</string>
	<string name="settings_newpassword">New Password:</string>
	<string name="settings_cfnewpassword">Confirm Password:</string>
	<string name="settings_submitpassword">Submit Password</string>
	<string name="settings_description">Group Description:</string>
	<string name="settings_groupname">Group Name:</string>
	<string name="settings_submitbtn">Save Changes</string>
	<string name="settings_leave">Leave Group</string>
	<string name="settings_hint">Tap to Edit</string>
	<string name="settings_firstname">First Name</string>
	<string name="settings_lastname">Last Name</string>
	<string name="settings_changepassword">Change Password</string>
	<string name="settings_inviteusers">Invite Users to Group</string>

	<!--Reminder Screen-->
	<string name="reminder_title">Reminders</string>
	<string name="reminder_noreminders">You are good!\nNoReminders</string>


	<string name="pass_retreive">Get my password</string>
	<string name="email_hint">email</string>
	<string name="bill_IOU_total">Total:</string>
	<string name="editBill_title">Edit Bill</string>


	<string name="join_group_header">Join Group</string>
	<string name="join_groupbtn">Join Group</string>
	<string name="addbill_des_length">(100 Characters)</string>
	<string name="addbill_owe">I Owe</string>
	<string name="home_edit_profile_hint">Edit Profile</string>
</resources>
