<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:gravity="center"
		android:padding="10dp"
		android:text="@string/editBill_title"
		android:textColor="@color/colorAccent"
		android:textSize="30sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorAccent"
		android:orientation="vertical"
		android:padding="10dp"
		tools:context="com.rip.roomies.activities.bills.ModifyBill">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/addbill_name"
			android:textColor="@color/colorPrimary"
			android:textSize="30sp" />

		<EditText
			android:id="@+id/editBillDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:textColor="@color/black"
			android:background="@drawable/edittextlight"
			android:textCursorDrawable="@null"
			android:inputType="textShortMessage|textMultiLine"
			android:maxLength="100"
			android:hint="@string/addbill_des_length"
			android:maxLines="3"
			android:textSize="25sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:text="@string/addbill_amount"
			android:textColor="@color/colorPrimary"
			android:textSize="30sp" />

		<EditText
			android:id="@+id/editBillAmount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:textColor="@color/black"
			android:background="@drawable/edittextlight"
			android:textCursorDrawable="@null"
			android:inputType="numberDecimal"
			android:textSize="25sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/addbill_who"
			android:textColor="@color/colorPrimary"
			android:textSize="30dp" />


		<com.rip.roomies.views.UserSpinner
			android:id="@+id/editBillName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/rec_border"
			android:layout_margin="5dp">

		</com.rip.roomies.views.UserSpinner>

		<Button
			android:id="@+id/submitBillChanges"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="10dp"
			android:background="@drawable/rec_border"
			android:padding="20dp"
			android:text="Save Changes"
			android:textColor="@color/colorPrimary"
			android:textSize="20dp" />


	</LinearLayout>
</LinearLayout>