<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.rip.roomies.activities.login.Login">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/appname3"
			android:layout_width="wrap_content"
			android:layout_height="80dp"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:layout_marginTop="50dp" />

		<EditText
			android:id="@+id/username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="50dp"
			android:background="@drawable/edittext"
			android:textCursorDrawable="@null"
			android:hint="@string/unhint"
			android:inputType="text"
			android:paddingBottom="10dp"
			android:paddingLeft="20dp"
			android:paddingTop="10dp"
			android:textColor="@color/colorAccent"
			android:textColorHint="@color/text"
			android:textSize="20dp"
			/>

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="30dp"
			android:background="@drawable/edittext"
			android:textCursorDrawable="@null"
			android:hint="@string/pwhint"
			android:inputType="textPassword"
			android:paddingBottom="10dp"
			android:paddingLeft="20dp"
			android:paddingTop="10dp"
			android:textColor="@color/colorAccent"
			android:textColorHint="@color/text"
			android:textSize="20dp"
			/>

		<LinearLayout
			android:id="@+id/btns"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/loginbtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="2dp"
				android:layout_weight="1"
				android:background="@drawable/buttons"
				android:text="@string/login"
				android:textColor="@color/colorPrimary"
				android:theme="@android:style/Theme.Holo" />

			<Button
				android:id="@+id/regbtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="20dp"
				android:layout_weight="1"
				android:background="@drawable/buttons"
				android:text="@string/reg"
				android:textColor="@color/colorPrimary"
				android:theme="@android:style/Theme.Holo" />
		</LinearLayout>

		<TextView
			android:id="@+id/forgotpw"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:text="@string/forgotpw"
			android:textColor="@color/text"
			android:textSize="16sp" />

	</LinearLayout>
</FrameLayout>
