<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:orientation="vertical"
             tools:context="com.rip.roomies.activities.groups.CreateGroup">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center|top"
		android:layout_marginBottom="5dp"
		android:layout_marginTop="25dp"
		android:gravity="center_horizontal"
		android:text="@string/create_group_header"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/colorAccent"
		android:textSize="40sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<EditText
			android:id="@+id/group_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/underlinewhite"
			android:hint="@string/group_name_hint"
			android:textColor="@color/colorAccent"
			android:inputType="text"
			android:paddingBottom="5dp"
			android:paddingLeft="10dp"
			android:textColorHint="@color/text"
			android:textCursorDrawable="@null"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/group_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="30dp"
			android:background="@drawable/underlinewhite"
			android:hint="@string/group_desription_hint"
			android:inputType="textShortMessage|textMultiLine"
			android:paddingBottom="5dp"
			android:paddingLeft="10dp"
			android:maxLength="100"
			android:textColorHint="@color/text"
			android:textColor="@color/colorAccent"
			android:textCursorDrawable="@null"
			android:textSize="20sp" />

		<Button
			android:id="@+id/create_group_submit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="40dp"
			android:background="@drawable/buttons"
			android:paddingBottom="5dp"
			android:paddingTop="5dp"
			android:text="@string/submit"
			android:textColor="@color/colorPrimary"
			android:textSize="24sp" />
	</LinearLayout>
</FrameLayout>