<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
			android:background="@color/colorAccent"
              tools:context="com.rip.roomies.activities.profile.ChangePassword">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:text="@string/settings_previouspassword"
		android:textColor="@color/black"
		android:textSize="25sp" />

	<EditText
		android:id="@+id/settings_previouspassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/transparent"
		android:inputType="textPassword"
		android:textColor="@color/black"
		android:textCursorDrawable="@null"
		android:textSize="35dp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:background="@color/black_overlay" />


	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:text="@string/settings_newpassword"
		android:textColor="@color/black"
		android:textSize="25sp" />

	<EditText
		android:id="@+id/settings_newpassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/transparent"
		android:inputType="textPassword"
		android:textColor="@color/black"
		android:textCursorDrawable="@null"
		android:textSize="35dp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:background="@color/black_overlay" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:text="@string/settings_cfnewpassword"
		android:textColor="@color/black"
		android:textSize="25sp" />

	<EditText
		android:id="@+id/settings_cfnewpassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/transparent"
		android:inputType="textPassword"
		android:textColor="@color/black"
		android:textCursorDrawable="@null"
		android:textSize="35dp" />

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:background="@color/black_overlay" />


	<Button
		android:id="@+id/settings_submitpassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center_horizontal"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/rec_border"
		android:padding="20dp"
		android:text="@string/settings_submitpassword"
		android:textColor="@color/colorPrimary"
		android:textSize="20sp" />


</LinearLayout>
