<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/settings_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_user_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:clickable="true" />

            <TextView
                android:id="@+id/settings_tap_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/settings_hint"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/black_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_firstname"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:maxLength="30"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_lastname"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:maxLength="30"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_email"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_groupname"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_gname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_description"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/settings_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:maxLength="100"
                android:inputType="textShortMessage|textMultiLine"
                android:textColor="@color/black"
                android:textSize="20sp" />

	        <View
		        android:layout_width="100dp"
		        android:layout_height="1dp"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="30dp"
		        android:layout_gravity="center"
		        android:background="@color/black_overlay" />


            <Button
                android:id="@+id/settings_changepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rec_border_pink"
                android:fontFamily="sans-serif"
                android:padding="20dp"
                android:text="@string/settings_changepassword"
                android:textColor="@color/pink"
                android:textSize="20sp" />


	        <Button
		        android:id="@+id/settings_inviteusers_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="bottom|center_horizontal"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/rec_border_green"
		        android:fontFamily="sans-serif"
		        android:padding="20dp"
		        android:text="@string/settings_inviteusers"
		        android:textColor="@color/green"
		        android:textSize="20sp" />


            <!--<Button
                android:id="@+id/settings_leavebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rec_border_pink"
                android:fontFamily="sans-serif-thin"
                android:padding="10dp"
                android:text="@string/settings_leave"
                android:textColor="@color/pink"
                android:textSize="30sp" />-->
	        <View
		        android:id="@+id/settings_bottom_divider"
		        android:layout_width="100dp"
		        android:layout_height="1dp"
		        android:layout_marginBottom="10dp"
		        android:layout_marginTop="30dp"
		        android:layout_gravity="center"
		        android:background="@color/black_overlay" />

            <Button
                android:id="@+id/settings_submitbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rec_border"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/settings_submitbtn"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>